--- a/src/components/UI/ConnectButton/styles.module.css
+++ b/src/components/UI/ConnectButton/styles.module.css
@@ -1,7 +1,6 @@
 .connect {
   appearance: button;
-  background-color: transparent;
-  background-image: linear-gradient(to bottom, #fff, #f8eedb);
+  background-color: #fff3c6;
   border: 0 solid #e5e7eb;
   border-radius: 0.5rem;
   box-sizing: border-box;
@@ -16,7 +15,7 @@
   font-weight: 700;
   line-height: 24px;
   margin: 0;
-  padding: 1rem 1.5rem;
+  padding: 0.7rem 1.5rem;
   text-align: center;
   text-transform: none;
   transition: all 0.1s cubic-bezier(0.4, 0, 0.2, 1);
@@ -28,7 +27,7 @@
 }
 
 .connect:active {
-  background-color: #f3f4f6;
+  background-color: #ddd2aa;
   box-shadow: -1px 2px 5px rgba(81, 41, 10, 0.15),
     0px 1px 1px rgba(81, 41, 10, 0.15);
   transform: translateY(0.125rem);
